Clean up API
- Rename DeviceComponent to InputComponent
- Reduce unnecessary public API surface of InputComponent
- Hold all polled data in the device for all the components to minimize the coupling with the native implementation (only the device has a callback)
- Add toString() for InputComponent